# barc

./: OA  .gitignore  .gitmodules  All_Sensors_Threaded.py  DEADJOE  KillableThread.py  PID_drive.py  README.md  SineWaveDrive.py  c  dependecies.jl  env_loader_odroid.sh  env_loader_pc.sh  env_loader_pc_mpc_ubuntu.sh  env_loader_pc_sarah.sh  env_loader_pc_shuqi.sh  env_loader_pc_vis.sh  env_loader_tx1.sh  env_loader_ugo_visual.sh  env_loader_yoga.sh  license.txt  main.py  myahrs test.py  odroid_setup.sh  removing-packages  sensor_simulation.py
ROS - main/barc/: CMakeLists.txt  barc.launch  package.xml
ROS - main/barc/data/: K_lqr
ROS - main/barc/src/: IMU_interface.py  README.md  auto_mode.py  auto_mode_arduino.py.original  data_acq.py  imu_data_acq.py  manuevers.py  state_estimation.py
workspace/src/barc/: CMakeLists.txt  barc.launch  debug  imu.launch  imu_reading.launch  openLoop.launch  openLoop_LQR_init.launch  openLoop_circular.launch  openLoop_straight.launch  package.xml  state_est_test.launch  tracksoval.jld  trackstrack_3.jld
workspace/src/barc/control/: con_para.mat
workspace/src/barc/launch/: .rc_record_vision.launch.swp  MPC_parking.launch  arduino.launch  barc_agent_1.launch  barc_agent_2.launch  barc_agent_multiple.launch  barc_multi_sim.launch  barc_sim.launch  barc_sim_Inputs.launch  barc_sim_MultiRate.launch  barc_sim_NoVx.launch  barc_sim_PsiInputs.launch  barc_sim_feature_data_collecting.launch  barc_sim_offset.launch  barc_sim_test.launch  camera.launch  circle_ol_no_imu.launch  circular_test_exp.launch  circular_test_sim.launch  closedLoop_LQR.launch  closedLoop_MPC.launch  closedLoop_mpc.launch  closedLoop_straight.launch  controller.launch  cruiseControl.launch  dnn_record.launch  drift_corner.launch  enc_gps_vel_broadcast.launch  encoder_calibration.launch  encoder_test_circular.launch  encoder_test_straight.launch  estimation_DynBkMdl.launch  estimation_KinBkMdl.launch  estimation_KinBkMdl_gps.launch  estimation_example.launch  exp_DynLin.launch  exp_DynLin3.launch  exp_Fd.launch  exp_ID.launch  exp_IDLin.launch  (+121 more)
workspace/src/barc/msg/: ECU.msg  Encoder.msg  Encoder_Sensor_Reading.msg  Input.msg  Logging.msg  Moving.msg  SafeSetGlob.msg  TimeSignal.msg  Vel.msg  Vel_est.msg  Z_DynBkMdl.msg  barc_state.msg  mpcSol.msg  mpc_solution.msg  mpc_visual.msg  pos_info.msg  pos_info.msg.orig  pos_info64.msg  prediction.msg  selected_states.msg  simulatorStates.msg  state_info.msg  theta.msg  wheel.msg  xy_prediction.msg
workspace/src/barc/src/: .state_estimation.py.swp  ClassControllerLMPC.py  ControllerClasses.py  ControllerLMPC.py  ControllerMain.py  GP_data_process.jl  LL_ctrl.jl  LMPC.py  LMPC_node.jl  LMPC_node.jl.orig  LMPC_node_100.jl  LMPC_node_feature_data_collecting.jl  LMPC_node_feature_data_collecting_new_ID.jl  LMPC_node_new_ID.jl  LMPC_node_profiler.jl  Localization_helpers.py  Localization_node.py  MPC_node.jl  MPControllers.py  NNMPC_controller.jl  PathFollowingLTI_MPC.py  PathFollowingLTVMPC.py  README.md  StateEstimatorClean.py  VhMdl.jl  Weights_net_twoObs_phy_first5_out_xy_vlim_Jan20compVmaxNegSpeed.mat  agent.jl  agent.py  agent_node.jl  arduino_interface.py  arduino_output.py  auto_mode.py  barc_record.jl  barc_simulator.jl  barc_simulator.jl.orig  barc_simulator_dyn.jl  barc_simulator_dyn.py  barc_simulator_dyn_lukas.jl  base.py  camera_processing.py  (+200 more)
workspace/src/barc_cpp/: CMakeLists.txt  package.xml
workspace/src/barc_cpp/msg/: ECU.msg  Encoder.msg  Ultrasound.msg  Z_KinBkMdl.msg  six_states.msg
workspace/src/barc_cpp/src/: ekf.hpp  ekf_6s.hpp  state_estimation_DynBkMdl.cpp  state_estimation_DynBkMdl_6s.cpp  system_models.hpp  system_models_6s.hpp
workspace/src/data_service/: CMakeLists.txt  license.txt  package.xml
workspace/src/data_service/launch/: service.launch
workspace/src/data_service/msg/: TimeSignal.msg
workspace/src/data_service/scripts/: .gitignore  base.py  data_connection.py  raw_test.py  service.py  test.py  upload.py
workspace/src/data_service/srv/: DataForward.srv  RegisterExperiment.srv  RegisterSetting.srv  RegisterVideo.srv
workspace/src/ethzasl_xsens_driver-master/: .gitignore  AUTHORS  CHANGELOG.rst  CMakeLists.txt  LICENCE  README  mainpage.dox  package.xml
workspace/src/ethzasl_xsens_driver-master/launch/: xsens_driver.launch
workspace/src/ethzasl_xsens_driver-master/nodes/: mtdef.py  mtdevice.py  mtnode.py
workspace/src/geometry/tf/: CHANGELOG.rst  CMakeLists.txt
workspace/src/marvelmind_indoor_gps/: CMakeLists.txt  package.xml
workspace/src/marvelmind_indoor_gps/launch/: indoor_gps.launch
workspace/src/marvelmind_indoor_gps/src/: indoor_gps.py
workspace/src/myahrs_driver/: package.xml
workspace/src/myahrs_driver/launch/: myahrs_driver.launch
workspace/src/roslint/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
workspace/src/roslint/cmake/: roslint-extras.cmake.em
workspace/src/roslint/scripts/: cpplint  pep8  test_wrapper
workspace/src/roslint/tests/: CMakeLists.txt  clean1.py  dirty1.py  runlint.py
workspace/src/rqt_common_plugins/rqt_action/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_bag/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_bag_plugins/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_common_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/src/rqt_common_plugins/rqt_console/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_dep/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_graph/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
workspace/src/rqt_common_plugins/rqt_image_view/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
workspace/src/sweep-ros/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
(+1046 files in other folders)
