<?xml version="1.0"?>
<package>
  <name>barc</name>
  <version>0.4.0</version>
  <description>Berkeley Autonomous Race Car </description>
  <maintainer email="jon.gonzales@berkeley.edu">BARC team</maintainer>
  <license>MIT</license>
  <url type="website"> http://www.barc-project.com </url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
