<?xml version="1.0"?>
<package>
  <name>data_service</name>
  <version>0.0.0</version>
  <description>The data_service package</description>
  <maintainer email="kiet.lam@berkeley.edu">mpc</maintainer>
  <license>MIT</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
