<?xml version="1.0"?>
<package>
  <name>marvelmind_indoor_gps</name>
  <version>0.0.0</version>
  <description>The marvelmind_indoor_gps package</description>
  <maintainer email="jon.gonzales@berkeley.edu">odroid</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
