<?xml version="1.0"?>
<package>
    <name>sweep_ros</name>
    <version>0.2.0</version>
    <description>The sweep_ros package</description>

    <maintainer email="support@scanse.io">Kent Williams</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_msgs</build_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pointcloud_to_laserscan</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
