<package>
  <name>rqt_common_plugins</name>
  <version>0.3.13</version>
  <description>
    rqt_common_plugins metapackage provides ROS backend graphical tools suite that can be used on/off of robot runtime.<br />
    <br />
    To run any rqt plugins, just type in a single command "rqt", then select any plugins you want from the GUI that launches afterwards.<br />
    <br />
    rqt consists of three following metapackages:<br />
    <ul>
     <li><a href = "http://ros.org/wiki/rqt">rqt</a> - core modules of rqt (ROS GUI) framework. rqt plugin developers barely needs to pay attention to this metapackage.</li>
     <li>rqt_common_plugins (you're here!)</li>
     <li><a href = "http://ros.org/wiki/rqt_robot_plugins">rqt_robot_plugins</a> - rqt plugins that are particularly used with robots during their runtime.</li><br />
    </ul>
   <br />
  </description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_common_plugins</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author>Dirk Thomas</author>
  <author>Dorian Scholz</author>
  <author>Thibault Kruse</author>
  <author>Aaron Blasdel</author>
  <author>Isaac Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rqt_action</run_depend>
  <run_depend>rqt_bag</run_depend>
  <run_depend>rqt_bag_plugins</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_dep</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_image_view</run_depend>
  <run_depend>rqt_launch</run_depend>
  <run_depend>rqt_logger_level</run_depend>
  <!-- <run_depend>rqt_marble</run_depend> --> <!-- 4/9/2013 Not ready. When ready to be released, <track>.ignored on Release Repository that is meant to ignore this package should also be modified. -->
  <run_depend>rqt_msg</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rqt_publisher</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rqt_py_console</run_depend>
  <run_depend>rqt_reconfigure</run_depend>
  <run_depend>rqt_service_caller</run_depend>
  <run_depend>rqt_shell</run_depend>
  <run_depend>rqt_srv</run_depend>
  <run_depend>rqt_top</run_depend>
  <run_depend>rqt_topic</run_depend>
  <run_depend>rqt_web</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
