<package>
  <name>rqt_dep</name>
  <version>0.3.13</version>
  <description>rqt_dep provides a GUI plugin for visualizing the ROS dependency graph.</description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_dep</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author>Thibault Kruse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <test_depend>python-mock</test_depend>

  <export>
    <architecture_independent/>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

