<?xml version="1.0"?>
<package>
  <name>rqt_launch</name>
  <version>0.3.13</version>
  <description>This rqt plugin ROS package provides easy view of .launch files.
  User can also start and end node by node that are defined in those files.
  </description>

  <maintainer email="130s@lateeye.net">Isaac Saito</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_launch</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins/rqt_launch</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author>Isaac Saito</author>
  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rqt_py_common</build_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>

  <export>
    <architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
