<package>
  <name>rqt_py_common</name>
  <version>0.3.13</version>
  <description>
    rqt_py_common provides common functionality for rqt plugins written in Python.
    Despite no plugin is provided, this package is part of the rqt_common_plugins
    repository to keep refactoring generic functionality from these common plugins
    into this package as easy as possible.

    Functionality included in this package should cover generic ROS concepts and
    should not introduce any special dependencies beside "ros_base".
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_py_common</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
  <author>Dorian Scholz</author>
  <author>Isaac Saito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>genpy</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>

  <!-- 3/11/2013 depending on actionlib & rosbag is only temporary;
  rosaction.py needs it. In the future this run_depend will be removed when
  rosaction gets moved to actionlib. -->
  <run_depend>actionlib</run_depend>
  <run_depend>rosbag</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
